infra/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: voucher-sor
spec:
  selector:
    app: api
  ports:
    - port: 4000
      targetPort: 4000
