infra/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: voucher-sor
spec:
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 80
